# subreddit-analytics

./: .env.example  .flake8  .gitignore  .sqlfluff  .sqlfluffignore  README.md  Taskfile.yml  poetry.toml  pyproject.toml
assets/: post_ids.csv
dbt/: Taskfile.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: remove_stopwords.sql  tfidf.sql
dbt/models/base/subreddit_data_raw/: __subreddit_data_raw__sources.yml  _base_subreddit_data_raw__comments.yml  _base_subreddit_data_raw__submissions.yml  base_subreddit_data_raw__comments.sql  base_subreddit_data_raw__submissions.sql
dbt/models/core/: _dim_authors.yml  _dim_date.yml  _dim_words.yml  _int_submissions_score_adjusted.yml  _tfidf_comments.yml  _tfidf_submissions.yml  _tfidf_submissions_and_comments.yml  dim_authors.sql  dim_date.sql  dim_words.sql  int_submissions_score_adjusted.sql  tfidf_comments.sql  tfidf_submissions.sql  tfidf_submissions_and_comments.sql
dbt/models/utils/: dates.sql  dates.yml
dbt/sqlfluff_libs/: dbt_utils.py
infra/: main.tf  terraform.tfstate.backup  variables.tf
notebooks/: test api praw.ipynb  test_reddit_api.ipynb
prefect/: api_to_duckdb.py  blocks.py  flows_api_to_bq.py  tasks_get_subreddit_data.py  tasks_upload_to_bq.py  utils_.py
